syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "common.proto";

package waitingRoomService;

option java_package = "ar.edu.itba.pod.grpc.waitingRoomService";
option java_outer_classname = "WaitingRoomServiceModel";
option java_multiple_files = true;

service WaitingRoomService{
  rpc AddPatient(common.RequestPatient) returns (common.Patient);
  rpc ChangePatientLevel(common.RequestPatient) returns (common.Patient);
  rpc WaitingTime(google.protobuf.StringValue) returns (common.PatientTime);
}

/*
 * Si cdo devolvemos el level es -1 es xq el level es invalido,
 * si es -2 xq el name ya existe
 * el state es como un enum q si es 1 esta esperando, 2 esta siendo atendido y 3 si ya acabo la consulta
 */